--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/slu-cs/project-finalproject-tim-jonas/issues"
   },
-  "homepage": "https://github.com/slu-cs/project-finalproject-tim-jonas#readme"
+  "homepage": "https://github.com/slu-cs/project-finalproject-tim-jonas#readme",
+  "dependencies": {
+    "express-session": "^1.17.1"
+  }
 }
