--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/slu-cs/project-finalproject-tim-jonas#readme",
   "dependencies": {
-    "express-session": "^1.17.1"
+    "ejs": "^3.1.2",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.9.10"
   }
 }
